<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Vietnamese-t9-ime: T9 input method for Vietnamese.
  ~ Copyright (C) 2020 Vu Tran Kien.
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<resources>

    <string name="app_name">t9vietnamese</string>
    <string name="hello_world">Hello world!</string>


    <!-- Labels for subtype -->
    <string name="label_subtype_generic">%s</string>
    <string name="label_subtype_en_GB">English (GB)</string>
    <string name="database_name">@string/app_name</string>
    <string name="oops">Oops, %s</string>
    <string name="btn_1">1\n</string>
    <string name="btn_2">2\nabc</string>
    <string name="btn_3">3\ndef</string>
    <string name="btn_4">4\nghi</string>
    <string name="btn_5">5\njkl</string>
    <string name="btn_6">6\nmno</string>
    <string name="btn_7">7 pqrs</string>
    <string name="btn_8">8 tuv</string>
    <string name="btn_9">9 wxyz</string>
    <string name="btn_star">*</string>
    <string name="btn_0">0</string>
    <string name="btn_sharp">#</string>
    <string name="btn_right"><![CDATA[>]]></string>
    <string name="test_hint">test here</string>
    <string name="notify_initialized">Engine initialized!</string>
    <string name="engine_loading">Loading engine… %d</string>
</resources>
