<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Vietnamese-t9-ime: T9 input method for Vietnamese.
  ~ Copyright (C) 2020 Vu Tran Kien.
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<Keyboard xmlns:android="http://schemas.android.com/apk/res/android"
    android:horizontalGap="0px"
    android:keyWidth="26.67%p"
    android:keyHeight="@dimen/key_height"
    android:verticalGap="0px">
    <Row>
        <Key
            android:keyLabel="@string/btn_1"
            android:keyOutputText="@string/btn_1"
            android:popupCharacters="@string/btn_1" />
        <Key
            android:keyLabel="@string/btn_2"
            android:keyOutputText="@string/btn_2"
            android:popupCharacters="@string/btn_2" />
        <Key
            android:keyLabel="@string/btn_3"
            android:keyOutputText="@string/btn_3"
            android:popupCharacters="@string/btn_3" />
        <Key android:keyLabel="-" />
    </Row>
    <Row>
        <Key
            android:keyLabel="@string/btn_4"
            android:keyOutputText="@string/btn_4"
            android:popupCharacters="@string/btn_4" />
        <Key
            android:keyLabel="@string/btn_5"
            android:keyOutputText="@string/btn_5"
            android:popupCharacters="@string/btn_5" />
        <Key
            android:keyLabel="@string/btn_6"
            android:keyOutputText="@string/btn_6"
            android:popupCharacters="@string/btn_6" />
        <Key android:keyLabel="." />
    </Row>
    <Row>
        <Key
            android:keyEdgeFlags="left"
            android:keyLabel="@string/btn_7"
            android:keyOutputText="@string/btn_7"
            android:popupCharacters="@string/btn_7" />
        <Key
            android:keyLabel="@string/btn_8"
            android:popupCharacters="@string/btn_8"
            android:keyOutputText="@string/btn_8" />
        <Key
            android:keyLabel="@string/btn_9"
            android:popupCharacters="@string/btn_9"
            android:keyOutputText="@string/btn_9" />
        <!--android:keyIcon="@drawable/sym_keyboard_delete"-->
        <Key
            android:keyEdgeFlags="right"
            android:keyIcon="@drawable/sym_keyboard_delete"
            android:keyLabel="&lt;" />
    </Row>
    <Row>
        <Key
            android:keyIcon="@drawable/sym_keyboard_space"
            android:keyLabel="*" />
        <Key
            android:keyLabel="@string/btn_0"
            android:popupCharacters="@string/btn_0"
            android:keyOutputText="@string/btn_0" />
        <Key
            android:keyLabel="@string/btn_sharp"
            android:popupCharacters="@string/btn_sharp"
            android:keyOutputText="@string/btn_sharp" />
        <Key
            android:keyIcon="@drawable/sym_keyboard_return"
            android:keyLabel="rt" />
    </Row>
</Keyboard>
