<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Vietnamese-t9-ime: T9 input method for Vietnamese.
  ~ Copyright (C) 2020 Vu Tran Kien.
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dialpad"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:shrinkColumns="*"
    android:stretchColumns="*"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp">

    <Button
        android:id="@+id/button"
        style="?android:attr/buttonBarStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="onBtnClick"
        android:text="@string/btn_1"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        style="?android:attr/buttonBarStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="onBtnClick"
        android:text="@string/btn_2"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button3"
        style="?android:attr/buttonBarStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="onBtnClick"
        android:text="@string/btn_3"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/button4"
        style="?android:attr/buttonBarStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="onBtnClick"
        android:text="@string/btn_4"
        app:layout_constraintBottom_toTopOf="@+id/button7"
        app:layout_constraintEnd_toStartOf="@+id/button5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/button5"
        style="?android:attr/buttonBarStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="onBtnClick"
        android:text="@string/btn_5"
        app:layout_constraintBottom_toTopOf="@+id/button8"
        app:layout_constraintEnd_toStartOf="@+id/button6"
        app:layout_constraintStart_toEndOf="@+id/button4"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/button6"
        style="?android:attr/buttonBarStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="onBtnClick"
        android:text="@string/btn_6"
        app:layout_constraintBottom_toTopOf="@+id/button9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button5"
        app:layout_constraintTop_toBottomOf="@+id/button3" />


    <Button
        android:id="@+id/button7"
        style="?android:attr/buttonBarStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="onBtnClick"
        android:text="@string/btn_7"
        app:layout_constraintBottom_toTopOf="@+id/buttonStar"
        app:layout_constraintEnd_toStartOf="@+id/button8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <Button
        android:id="@+id/button8"
        style="?android:attr/buttonBarStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="onBtnClick"
        android:text="@string/btn_8"
        app:layout_constraintBottom_toTopOf="@+id/button11"
        app:layout_constraintEnd_toStartOf="@+id/button9"
        app:layout_constraintStart_toEndOf="@+id/button7"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <Button
        android:id="@+id/button9"
        style="?android:attr/buttonBarStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="onBtnClick"
        android:text="@string/btn_9"
        app:layout_constraintBottom_toTopOf="@+id/button12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button8"
        app:layout_constraintTop_toBottomOf="@+id/button6" />


    <Button
        android:id="@+id/buttonStar"
        style="?android:attr/buttonBarStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="onBtnStarClick"
        android:text="@string/btn_star"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button7" />

    <Button
        android:id="@+id/button11"
        style="?android:attr/buttonBarStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="onBtnClick"
        android:text="@string/btn_0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button12"
        app:layout_constraintStart_toEndOf="@+id/buttonStar"
        app:layout_constraintTop_toBottomOf="@+id/button8" />

    <Button
        android:id="@+id/button12"
        style="?android:attr/buttonBarStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="onBtnClick"
        android:text="@string/btn_sharp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button11"
        app:layout_constraintTop_toBottomOf="@+id/button9" />


</androidx.constraintlayout.widget.ConstraintLayout>
