<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                               xmlns:app="http://schemas.android.com/apk/res-auto"
                                               xmlns:tools="http://schemas.android.com/tools"
                                               android:layout_width="match_parent"
                                               android:layout_height="match_parent"
                                               android:orientation="vertical"
                                               tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/texts"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_heightPercent="50%">

        <TextView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/hello_world"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/test_hint"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/vertical_pane_left"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/texts"
        android:layout_weight="1"
        android:baselineAligned="false"
        android:orientation="horizontal"
        app:layout_heightPercent="50%"
        app:layout_widthPercent="20%">
    </LinearLayout>

    <include layout="@layout/dialpad_table"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_below="@id/texts"
             android:layout_toEndOf="@id/vertical_pane_left"
             android:layout_toRightOf="@id/vertical_pane_left"
             app:layout_heightPercent="50%"
             app:layout_widthPercent="60%"/>

    <com.vutrankien.t9vietnamese.T9KeyboardView
        android:visibility="gone"
        android:id="@+id/dialpad2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/texts"
        android:layout_toEndOf="@id/dialpad"
        android:layout_toRightOf="@id/dialpad"
        app:layout_heightPercent="50%"
        app:layout_widthPercent="60%">
    </com.vutrankien.t9vietnamese.T9KeyboardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@id/dialpad2"
        android:layout_toRightOf="@id/dialpad2"
        app:layout_heightPercent="50%"
        app:layout_widthPercent="20%">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/btn_right"/>
    </LinearLayout>
</android.support.percent.PercentRelativeLayout>
